<?xml version="1.0"?>
<package format="2">
  <name>motion-tracker</name>
  <version>0.0.1</version>
  <description>The motion-tracker package</description>

  <maintainer email="javadomnia@hotmail.com">Mohamad Javad Jafari</maintainer>
 
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>OpenCV</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>OpenCV</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>OpenCV</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
